argocd/argocd/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: ArgoCD
    gethomepage.dev/icon: sh-argo-cd
    gethomepage.dev/description: "Argo CD is a declarative, GitOps continuous delivery\
      \ tool for Kubernetes."
    gethomepage.dev/pod-selector: app.kubernetes.io/name=argocd-server
  labels:
    app.kubernetes.io/instance: argocd-app
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
    - name: cilium-public-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - argocd.yanello.net
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
